# django-account

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  sonar-project.properties
.github/workflows/: codeql-analysis.yml  format.yml  quality.yml
account/: admin.py  backends.py  conf.py  filters.py  forms.py  middleware.py  models.py  urls.py  utils.py  views.py
account/locale/de/LC_MESSAGES/: django.mo  django.po
account/migrations/: 0001_initial.py  0002_multidomainauthflow.py  0002_multidomainauthrequest.py
account/multidomain/: exceptions.py
account/multidomain/altdomain/: flow_helpers_alt.py  urls.py  utils.py  views.py
account/multidomain/maindomain/: flow_helpers_main.py  urls.py  views.py
account/static/account/css/: darkmode.css
account/templates/: PassKeys_base.html  passkeys_base.html
account/templates/account/: account-delete-email.html  account-delete-successful.html  account-delete.html  base.html  error.html  home.html  login.html  oauth_management.html  password-change-done.html  password-change.html  password-delete.html  password-reset-complete.html  password-reset-confirm.html  password-reset-done.html  password-reset-email.html  password-reset-form.html  password-reset-subject.html  password-reset-subject.txt  profile.html
account/templates/account/passkeys/: base.html  passkeys_base.html
account/templates/account/snippets/: form.html  menubar.html  messages.html  social_login.html  social_manage.html
account/templates/admin/: index.html  login.html
account/templates/passkeys/: base.html
account/templatetags/: account_tags.py
account/well_known/: urls.py  views.py
docs/multidomain/: README.md
docs/multidomain/diagrams/: login.puml  logout.puml
