[metadata]
name = django-account
version = file: _version.txt
description = Accountverwaltung in Django
long_description = file: README.md
long_description_content_type = text/markdown
author = Rafael Urben
author_email = github@rafaelurben.ch
maintainer = Rafael Urben
maintainer_email = github@rafaelurben.ch
license = MIT License
classifiers =
    Private :: Do not upload - Too specific for reuse without modification
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0
    Framework :: Django :: 5.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
url = https://rafaelurben.github.io/django-account
docs_url = https://rafaelurben.github.io/django-account
bugtrack_url = https://github.com/rafaelurben/django-account/issues
project_urls =
    Docs = https://rafaelurben.github.io/django-account
    GitHub = https://github.com/rafaelurben/django-account
    Issues = https://github.com/rafaelurben/django-account/issues

[options]
setup_requires =
    setuptools
install_requires =
    Django>=4.2
    social-auth-app-django>=5.0.0
    django-passkeys>=1.2.7
python_requires = >= 3.9
include_package_data = true
packages = find:
